--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blackjack</title>
+    <link rel="stylesheet" href="index.css">
     <script src="index.js"></script>
 </head>
 <body>
-    
+    <h1>BlackJack</h1>
+    <p id="message-el">Want to play a round?</p>
+    <p>Cards:</p>
+    <p>Sum:</p>
+    <button onclick="startGame()">START GAME</button>
 </body>
 </html>
