--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blackjack</title>
     <link rel="stylesheet" href="index.css">
-    <script src="index.js"></script>
 </head>
 <body>
     <h1>BlackJack</h1>
     <p id="message-el">Want to play a round?</p>
     <p>Cards:</p>
-    <p>Sum:</p>
+    <p id="sum-el">Sum:</p>
     <button onclick="startGame()">START GAME</button>
+    <script src="index.js"></script>
 </body>
 </html>
